Fix factories scroll: add height constraint so overflow-y works

--- a/apps/frontend/src/components/factories/FactoriesHome/FactoriesHome.scss
+++ b/apps/frontend/src/components/factories/FactoriesHome/FactoriesHome.scss
@@ -1,5 +1,6 @@
 @use '../../../styles/constants' as *;
 
 [data-testid='factories-container'] {
+  height: 100%;
   overflow-y: auto;
 }
